--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
         <div class="container">
             <div class="row">
+                <div class="col-12">
+                    CONTACT ME 
+                </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Your name</label>
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name">
@@ -107,13 +110,31 @@
                     <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary mb-3">Send</button>
+                  </div>
             </div>
         </div>
 
-        
+        <div class="container text-center">
+            <div class="row">
+              <div class="col-12">
+                location
+              </div>
+              <div class="col-12">
+                socials
+              </div>
+              <div class="col-12">
+                info
+              </div>
+            </div>
+        </div>
 
-    
-
+        <footer class="container">
+            <div class="row">
+                Copyright your website 2019
+            </div>
+        </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
