--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="debug">
     
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-md bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><strong>START BOOTSTRAP</strong></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,22 +48,22 @@
               <div class="col-12">
                 text
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6 col-lg-4">
                 img1
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6 col-lg-4">
                 img2
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6 col-lg-4">
                 img3
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6 col-lg-4">
                 img4
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6 col-lg-4">
                 img5
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6 col-lg-4">
                 img6
               </div>
             </div>
@@ -77,10 +77,10 @@
               <div class="col-12">
                 star img
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti veritatis atque aliquid hic dicta, culpa dolore reiciendis quisquam, sit illum repellat natus. Debitis ab reprehenderit, harum rem molestias earum laboriosam.</p>
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-6">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque accusamus voluptate consectetur sint ipsam minima et, repellendus adipisci veniam maiores rem praesentium id numquam porro saepe dolorum aliquam. Aut, perspiciatis?</p>
               </div>
               <div class="col-12">
@@ -118,13 +118,13 @@
 
         <div class="container text-center">
             <div class="row">
-              <div class="col-12">
+              <div class="col-12 col-md-4">
                 location
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-4">
                 socials
               </div>
-              <div class="col-12">
+              <div class="col-12 col-md-4">
                 info
               </div>
             </div>
