--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
                     CONTACT ME 
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Your name</label>
+                    <label class="form-label">Your name</label>
                     <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="name">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <label class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">phone number</label>
+                    <label class="form-label">phone number</label>
                     <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="number">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <label class="form-label">Example textarea</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
