completed the big structure of the layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
 
-        <div class="container text-center">
+        <div class="container text-center bg-primary">
             <div class="row">
               <div class="col">
                 JUMBO
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="container text-center">
+        <div class="container text-center bg-primary">
             <div class="row">
               <div class="col-12">
                 text
@@ -91,7 +91,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 text-center">
                     CONTACT ME 
                 </div>
                 <div class="mb-3">
@@ -116,7 +116,7 @@
             </div>
         </div>
 
-        <div class="container text-center">
+        <div class="container text-center text-light bg-dark-subtle">
             <div class="row">
               <div class="col-12 col-md-4">
                 location
@@ -130,9 +130,11 @@
             </div>
         </div>
 
-        <footer class="container">
+        <footer class="container text-center text-light bg-dark">
             <div class="row">
-                Copyright your website 2019
+                <div class="col-12">
+                   Copyright your website 2019
+                </div>
             </div>
         </footer>
 
