add some padding and margin

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/framework.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body class="debug">
+  <body class="debug pt-5">
     
-        <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><strong>START BOOTSTRAP</strong></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
             </div>
         </nav>
 
-        <div class="container text-center bg-primary">
+        <div class="container text-center bg-primary mt-4">
             <div class="row">
               <div class="col">
                 JUMBO
@@ -48,22 +48,22 @@
               <div class="col-12">
                 text
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-md-6 col-lg-4 p-1">
                 img1
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-md-6 col-lg-4 p-1">
                 img2
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-md-6 col-lg-4 p-1">
                 img3
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-md-6 col-lg-4 p-1">
                 img4
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-md-6 col-lg-4 p-1">
                 img5
               </div>
-              <div class="col-12 col-md-6 col-lg-4">
+              <div class="col-12 col-md-6 col-lg-4 p-1">
                 img6
               </div>
             </div>
@@ -77,10 +77,10 @@
               <div class="col-12">
                 star img
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 p-1">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti veritatis atque aliquid hic dicta, culpa dolore reiciendis quisquam, sit illum repellat natus. Debitis ab reprehenderit, harum rem molestias earum laboriosam.</p>
               </div>
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 p-1">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque accusamus voluptate consectetur sint ipsam minima et, repellendus adipisci veniam maiores rem praesentium id numquam porro saepe dolorum aliquam. Aut, perspiciatis?</p>
               </div>
               <div class="col-12">
