--- a/index.html
+++ b/index.html
@@ -7,41 +7,71 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/framework.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-  <body class="debug pt-5">
+  <body>
       <header>    
-        <nav class="navbar navbar-expand-md fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="#"><strong>START BOOTSTRAP</strong></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
+          <nav class="navbar navbar-expand-md fixed-top" data-bs-theme="dark">
+            <div class="container">
+              <a class="navbar-brand p-2" href="#"><strong>START BOOTSTRAP</strong></a>
+              <nav class="navbar d-flex justify-content-center">
+                <div class="container-fluid justify-content-center">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                </div>
+                <div class="collapse mt-4" id="navbarToggleExternalContent">
+                  <ul class="navbar-nav text-center">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                  </ul>
+              </div>
+              </nav>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">START BOOTSTRAP</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body text-white">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-          </div>
-        </nav>
+          </nav>
       </header>
 
       <main>
-        <section id="ms-jumbo">
+        <section id="ms-jumbo" class="pt-5">
           <div class="container text-center text-white mt-4">
               <div class="row">
-                <div class="col-12">
+                <div class="col-12 pb-5">
                   <div class="ms-jumbo-img">
                       <img src="img/avatar.svg" alt="cabin">
                   </div>
-                  <h2>START BOOTSTRAP</h2>
+                  <h2 class="pt-4">START BOOTSTRAP</h2>
+                  <div class="ms-star-line d-flex align-items-center justify-content-center">
+                    <div class="ms-line"></div>
+                    <div class="ms-star"><i class="fa-solid fa-star"></i></div>
+                    <div class="ms-line"></div>
+                  </div>
+                  <span><strong>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</strong></span>
                 </div>
               </div>
           </div>
@@ -51,59 +81,95 @@
           <div class="container text-center">
               <div class="row">
                 <div class="col-12">
-                  <h3>Portfolio</h3>
+                  <h3 class="pt-4"><strong>PORTFOLIO</strong></h3>
+                  <div class="ms-star-line d-flex align-items-center justify-content-center">
+                    <div class="ms-line"></div>
+                    <div class="ms-star"><i class="fa-solid fa-star"></i></div>
+                    <div class="ms-line"></div>
+                  </div>
                 </div>
+
                 <div class="col-12 col-md-6 col-lg-4 p-1">
-                  <div class="ms-card">
-                    <img src="img/cabin.png" alt="cabin" class="img-fluid">
+                    <div class="ms-card p-2">
+                      <div class="hover-relative">
+                        <img src="img/cabin.png" alt="cabin" class="img-fluid">
+                        <div class="hover-card">
+                        <a href=""><i class="fa-regular fa-circle-check"></i></a>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 p-1">
-                  <div class="ms-card">
-                    <img src="img/cake.png" alt="cake" class="img-fluid">
+                  <div class="ms-card p-2">
+                    <div class="hover-relative">
+                      <img src="img/cake.png" alt="cabin" class="img-fluid">
+                      <div class="hover-card">
+                      <a href=""><i class="fa-regular fa-circle-check"></i></a>
+                    </div>
                   </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 p-1">
-                  <div class="ms-card">
-                    <img src="img/circus.png" alt="circus" class="img-fluid">
+              </div>
+              <div class="col-12 col-md-6 col-lg-4 p-1">
+                <div class="ms-card p-2">
+                  <div class="hover-relative">
+                    <img src="img/circus.png" alt="cabin" class="img-fluid">
+                    <div class="hover-card">
+                    <a href=""><i class="fa-regular fa-circle-check"></i></a>
                   </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 p-1">
-                  <div class="ms-card">
-                    <img src="img/game.png" alt="game" class="img-fluid">
-                  </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 p-1">
+              <div class="ms-card p-2">
+                <div class="hover-relative">
+                  <img src="img/game.png" alt="cabin" class="img-fluid">
+                  <div class="hover-card">
+                  <a href=""><i class="fa-regular fa-circle-check"></i></a>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 p-1">
-                  <div class="ms-card">
-                    <img src="img/safe.png" alt="safe" class="img-fluid">
-                  </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 p-1">
-                  <div class="ms-card">
-                    <img src="img/submarine.png" alt="submarine" class="img-fluid">
-                  </div>
-                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-1">
+            <div class="ms-card p-2">
+              <div class="hover-relative">
+                <img src="img/safe.png" alt="cabin" class="img-fluid">
+                <div class="hover-card">
+                <a href=""><i class="fa-regular fa-circle-check"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 p-1">
+          <div class="ms-card p-2">
+            <div class="hover-relative">
+              <img src="img/submarine.png" alt="cabin" class="img-fluid">
+              <div class="hover-card">
+              <a href=""><i class="fa-regular fa-circle-check"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
               </div>
           </div>
         </section>
 
         <section id="ms-info-text">
-          <div class="container text-center">
-            <div class="row">
-              <div class="col-12">
-                text
-              </div>
-              <div class="col-12">
-                star img
+          <div class="container text-center text-white pb-5">
+            <h3 class="pt-4">ABOUT US</h3>
+            <div class="ms-star-line d-flex align-items-center justify-content-center">
+              <div class="ms-line"></div>
+              <div class="ms-star"><i class="fa-solid fa-star"></i></div>
+              <div class="ms-line"></div>
+            </div>
+            <div class="row w-75 m-auto pt-3">
+              <div class="col-12 col-md-6 p-1">
+                <p class="text-start">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti veritatis atque aliquid hic dicta, culpa dolore reiciendis quisquam, sit illum repellat natus. Debitis ab reprehenderit, harum rem molestias earum laboriosam.</p>
               </div>
               <div class="col-12 col-md-6 p-1">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti veritatis atque aliquid hic dicta, culpa dolore reiciendis quisquam, sit illum repellat natus. Debitis ab reprehenderit, harum rem molestias earum laboriosam.</p>
-              </div>
-              <div class="col-12 col-md-6 p-1">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque accusamus voluptate consectetur sint ipsam minima et, repellendus adipisci veniam maiores rem praesentium id numquam porro saepe dolorum aliquam. Aut, perspiciatis?</p>
+                <p class="text-start">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque accusamus voluptate consectetur sint ipsam minima et, repellendus adipisci veniam maiores rem praesentium id numquam porro saepe dolorum aliquam. Aut, perspiciatis?</p>
               </div>
               <div class="col-12">
-                button
+                <button type="button" class="btn btn-outline-light mt-2"><i class="fa-solid fa-download"> </i> Download</button>
               </div>
             </div>
           </div>
@@ -111,29 +177,30 @@
 
         <section id="ms-info-form">
           <div class="container">
-            <div class="row">
+            <div class="col-12 text-center">
+              <h3 class="pt-4">CONTACT ME</h3>
+              <div class="ms-star-line d-flex align-items-center justify-content-center">
+                <div class="ms-line"></div>
+                <div class="ms-star"><i class="fa-solid fa-star"></i></div>
+                <div class="ms-line"></div>
+              </div>
+            </div>
+            <div class="row w-75 m-auto">
               <form action="">
-                  <div class="col-12 text-center">
-                      CONTACT ME 
+                  <div class="mb-3">
+                      <input type="text" class="form-control ms-input" name="form-name" id="form-name" placeholder="Name" required>
                   </div>
                   <div class="mb-3">
-                      <label class="form-label" for="form-name">Your name</label>
-                      <input type="text" class="form-control" name="form-name" id="form-name" placeholder="name" required>
+                      <input type="email" class="form-control ms-input" name="form-mail" id="form-mail" placeholder="Email address" required>
                   </div>
                   <div class="mb-3">
-                      <label class="form-mail">Email address</label>
-                      <input type="email" class="form-control" name="form-mail" id="form-mail" placeholder="email" required>
+                      <input type="tel" class="form-control ms-input" name="form-phone" id="form-phone" placeholder="Phone number" required>
                   </div>
                   <div class="mb-3">
-                      <label class="form-label" for="form-phone">phone number</label>
-                      <input type="tel" class="form-control" name="form-phone" id="form-phone" placeholder="number" required>
+                      <textarea class="form-control ms-input " name="form-text" id="form-text" rows="6" placeholder="Message"></textarea>
                   </div>
                   <div class="mb-3">
-                      <label class="form-label" for="form-text">Example textarea</label>
-                      <textarea class="form-control" name="form-text" id="form-text" rows="3"></textarea>
-                  </div>
-                  <div class="mb-3">
-                      <button type="submit" class="btn btn-primary mb-3">Send</button>
+                      <button type="submit" class="btn mb-3">Send</button>
                   </div>
               </form>
             </div>
@@ -141,21 +208,31 @@
         </section>
       </main>
 
-      <footer class="container text-center text-light bg-dark">
-        <div class="row" id="ms-about-us">
-            <div class="col-12 col-md-4">
-              location
+      <footer class="text-center text-light">
+        <div class="container-fluid">
+          <div class="row py-4 w-75 m-auto align-items-center justify-content-center" id="ms-about-us">
+            <div class="col-12 col-md-4 my-4">
+              <h6>LOCATION</h6>
+              <span>2215 John Daniel Drive Clark, MO 53465 </span>
             </div>
-            <div class="col-12 col-md-4">
-              socials
+            <div class="col-12 col-md-4 my-4">
+              <h6>AROUND THE WEB</h6>
+              <div class="footer-icon">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-google-plus-g"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+              </div>
             </div>
-            <div class="col-12 col-md-4">
-              info
+            <div class="col-12 col-md-4 my-4">
+              <h6>AROUND FREELANCER</h6>
+              <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum quis ad nemo dicta ipsum. Bootstrap theme created by <a class="footer-start-boot" href="">Start Bootstrap</a></span>
             </div>
-        </div>
-        <div class="row" id="ms-copyright">
-          <div class="col-12">
-            Copyright your website 2019
+          </div>
+          <div class="row py-4" id="ms-copyright">
+            <div class="col-12">
+              Copyright &copy; your website 2019
+            </div>
           </div>
         </div>
       </footer>
